Separate Android Encryption Password from Lockscreen Password
This permits the use of a different (hopefully longer and more complex!) encryption
password, while using a simpler (and easier to type) lockscreen password.

Based on omnirom patch:
Ref: omnirom/android_packages_apps_Settings@78e9a97

Conflicts:
	AndroidManifest.xml

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1195,6 +1195,9 @@
 
         <activity android:name=".EncryptionInterstitial"/>
 
+        <activity android:name="ChooseEncryptionPassword" android:exported="false"
+            android:windowSoftInputMode="stateVisible|adjustResize"/>
+
         <!-- Runs in the phone process since it needs access to the Phone object -->
         <activity android:name=".deviceinfo.Status"
                 android:label="@string/device_status_activity_title"
